<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button">Button</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_inn">SIGN IN</string>
    <string name="name1">Name</string>

    <string name="sign_upp">Sign Up</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="title_activity_dashboard1">Dashboard1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="fb_login_protocol_scheme">fb1958853887650962</string>
    <string name="facebook_client_token">e6a4fda38a737acd689a96c062a7c876</string>

    <string name="facebook_app_id">1958853887650962</string>

</resources>