<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_signup"
        tools:context=".SignUpFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="122dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/name1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="387dp"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="254dp"
            android:layout_height="27dp"
            android:layout_marginTop="3dp"
            android:text="@string/date_of_birth"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etDob"
            android:layout_width="316dp"
            android:layout_height="46dp"
            android:layout_marginTop="2dp"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="369dp"
            android:layout_height="54dp"

            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="85dp"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:text="User Id"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDob" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="114dp"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:text="Password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserId" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="383dp"
            android:layout_height="48dp"

            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="197dp"
            android:layout_height="31dp"
            android:layout_marginTop="8dp"
            android:text="Confirm Password"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:layout_editor_absoluteX="4dp" />

        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="392dp"
            android:layout_height="59dp"

            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="291dp" />

        <Button
            android:id="@+id/bSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#001827"
            android:text="Sign Up"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="366dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="213dp"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="Already have an account?"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="398dp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="92dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Sign In"
            android:textColor="#2695C6"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="445dp" />


        <ImageView
            android:id="@+id/ivDOB"
            android:layout_width="63dp"
            android:layout_height="44dp"
            android:src="@drawable/cal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etDob"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>